Fixed jumping hover states

--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -106,6 +106,10 @@ fieldset {
   line-height: 1;
   align-items: center;
   justify-content: center;
+
+  &::before {
+    content: '';
+  }
 }
 
 .sky-switch-label {
